# StudyAI

./: .gitignore  README.md
backend/: env.example  pyproject.toml  uvicorn.run
backend/app/: llm.py  main.py  pdf.py  schemas.py
frontend/: dev.sh  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(components)/: FileDrop.tsx  ResultNotes.tsx  ResultQuiz.tsx
