[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studyai-backend"
version = "0.1.0"
description = "StudyAI Backend - PDF to revision notes and MCQs"
authors = [
    {name = "StudyAI Team", email = "team@studyai.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "PyMuPDF>=1.23.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
